--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -2,19 +2,19 @@
     DEMO STYLE
 */
 
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+/* @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 body {
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
-}
-
+} */
+/* 
 p {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
     color: #999;
-}
+} */
 
 a,
 a:hover,
@@ -24,27 +24,27 @@ a:focus {
     transition: all 0.3s;
 }
 
-.navbar {
+/* .navbar {
     padding: 15px 10px;
     background: #fff;
     border: none;
     border-radius: 0;
 
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
+} */
 
-.navbar-btn {
+/* .navbar-btn {
     box-shadow: none;
     outline: none !important;
     border: none;
-}
+} */
 
-.line {
+/* .line {
     width: 100%;
     height: 1px;
     border-bottom: 1px dashed #ddd;
     margin: 40px 0;
-}
+} */
 
 /* ---------------------------------------------------
     SIDEBAR STYLE
@@ -70,10 +70,10 @@ a:focus {
 
 }
 
-#sidebar .sidebar-header {
+/* #sidebar .sidebar-header {
     padding: 20px;
     background: rgb(41, 41, 41);
-}
+} */
 
 #sidebar ul.components {
     padding: 20px 0;
@@ -123,38 +123,37 @@ ul ul a {
     background: #183d42;
 }
 
-ul.CTAs {
-    padding: 20px;
-}
-
-ul.CTAs a {
-    text-align: center;
-    font-size: 0.9em !important;
-    display: block;
-    border-radius: 5px;
-    margin-bottom: 5px;
-}
-
-a.download {
-    background: #fff;
-    color: #7386D5;
-}
-
-a.article,
-a.article:hover {
-    background: #171818 !important;
-    color: #fff !important;
-}
 
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
 
 #content {
-    width: 100%;
-    padding: 20px;
+    /* width: 100%;
+    padding: 20px; */
     min-height: 100vh;
-    transition: all 0.3s;
+    min-width: 100vh;
+   
+    /* transition: all 0.3s; */
+}
+
+#sidebarCollapse{
+    background-color: #212529;
+    color: #fff;
+    border: 0px;
+}
+
+#sidebarCollapse:hover{
+    background-color: #373838;
+    color: #fff;
+}
+
+.sidebar_active{ 
+    background: #e43a15;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #e65245, #e43a15);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #e65245, #e43a15); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    color: #fff;
 }
 
 /* ---------------------------------------------------
@@ -173,24 +172,5 @@ a.article:hover {
     }
 }
 
-#sidebarCollapse{
-    background-color: #212529;
-    color: #fff;
-    border: 0px;
-}
-
-#sidebarCollapse:hover{
-    background-color: #373838;
-    color: #fff;
-}
-
-.sidebar_active{ 
-    background: #e43a15;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #e65245, #e43a15)!important;  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #e65245, #e43a15)!important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-    color: #fff;
-}
 
 
-/* TEST */
