--- a/public/css/global.css
+++ b/public/css/global.css
@@ -94,3 +94,39 @@
 .popover__message {
   text-align: center;
 }
+
+.dropdown-toggle:after { content: none!important }
+
+.pulsing {
+
+	border-radius: 50%;
+	box-shadow: 0 0 0 rgb(255, 153, 0);
+	animation: pulse 2s infinite;
+}
+
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(244,157,22, 0.4);
+  }
+  70% {
+      -webkit-box-shadow: 0 0 0 10px rgba(244,157,22, 0);
+  }
+  100% {
+      -webkit-box-shadow: 0 0 0 0 rgba(244,157,22, 0);
+  }
+}
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(244,157,22, 0.4);
+    box-shadow: 0 0 0 0 rgba(244,157,22, 0.4);
+  }
+  70% {
+      -moz-box-shadow: 0 0 0 10px rgba(244,157,22, 0);
+      box-shadow: 0 0 0 10px rgba(244,157,22, 0);
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 rgba(244,157,22, 0);
+      box-shadow: 0 0 0 0 rgba(244,157,22, 0);
+  }
+}
