Added caret to dropdowns

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -95,7 +95,7 @@
   text-align: center;
 }
 
-.dropdown-toggle:after { content: none!important }
+#notification_bell .dropdown-toggle:after { content: none!important }
 
 .pulsing {
 
