--- a/public/css/global.css
+++ b/public/css/global.css
@@ -4,7 +4,9 @@
 }
 
 
-
+body{
+    background-color: #EEF5F9!important;
+}
 .badge{
     font-size: 0.75em!important;
     font-family: 'Roboto', sans-serif!important;
@@ -129,4 +131,21 @@
       -moz-box-shadow: 0 0 0 0 rgba(244,157,22, 0);
       box-shadow: 0 0 0 0 rgba(244,157,22, 0);
   }
+}
+
+.btn-circle {
+    width: 50px;
+    height: 50px;
+    border-radius: 60px;
+
+    text-align: center;
+    border: none;
+}
+
+#feeds li:hover{
+    background-color: #f7f7f7;
+}
+
+#active_users li:hover, #inactive_users li:hover, #average_drafting:hover , #average_checking:hover{
+    background-color: #f7f7f7;
 }
