--- a/public/css/global.css
+++ b/public/css/global.css
@@ -4,6 +4,7 @@
 }
 
 
+
 body{
     background-color: #EEF5F9!important;
 }
@@ -12,6 +13,9 @@ body{
     font-family: 'Roboto', sans-serif!important;
 }
 
+.bold{
+  font-weight: bold;
+}
 .hidden{
     display:none!important;
 }
@@ -40,6 +44,10 @@ body{
     color: #fff!important;
 }
 
+.realcognita{
+  background-color: #245E67!important;
+  color: #fff!important;
+}
 .real-cognita-orange{
     background-color: #DD6838!important;
     color: #fff!important;
@@ -60,10 +68,7 @@ body{
     font-size: 12px!important;
 }
 
-.user-details{
-    margin-left: 10px;
-    padding: 10px;
-}
+
 .btn-light{
     border: black!important;
 }
@@ -150,3 +155,49 @@ body{
     background-color: #f7f7f7;
 }
 
+/* Activity Dashboard*/
+.activity {
+    font-size: 14px;
+  }
+  
+   .activity .activity-item .activite-label {
+    color: #888;
+    position: relative;
+    flex-shrink: 0;
+    flex-grow: 0;
+    min-width: 64px;
+  }
+  
+   .activity .activity-item .activite-label::before {
+    content: "";
+    position: absolute;
+    right: -11px;
+    width: 4px;
+    top: 0;
+    bottom: 0;
+    background-color: #eceefe;
+  }
+  
+   .activity .activity-item .activity-badge {
+    margin-top: 3px;
+    z-index: 1;
+    font-size: 11px;
+    line-height: 0;
+    border-radius: 50%;
+    flex-shrink: 0;
+    border: 3px solid #fff;
+    flex-grow: 0;
+  }
+  
+   .activity .activity-item .activity-content {
+    padding-left: 10px;
+    padding-bottom: 20px;
+  }
+  
+   .activity .activity-item:first-child .activite-label::before {
+    top: 5px;
+  }
+  
+   .activity .activity-item:last-child .activity-content {
+    padding-bottom: 0;
+  }
