--- a/public/css/login.css
+++ b/public/css/login.css
@@ -11,6 +11,7 @@ h2 {
     text-align: center;
 }
 
+
 p {
     font-size: 14px;
     font-weight: 100;
@@ -75,6 +76,7 @@ input {
     padding: 12px 15px;
     margin: 8px 0;
     width: 100%;
+    font-size: 14px!important;
 }
 
 .container-logform {
@@ -215,27 +217,3 @@ input {
     width: 40px;
 }
 
-footer {
-    background-color: #222;
-    color: #fff;
-    font-size: 14px;
-    bottom: 0;
-    position: fixed;
-    left: 0;
-    right: 0;
-    text-align: center;
-    z-index: 999;
-}
-
-footer p {
-    margin: 10px 0;
-}
-
-footer i {
-    color: red;
-}
-
-footer a {
-    color: #3c97bf;
-    text-decoration: none;
-}
